// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ApiDetailsPage correctly with apiItem 1`] = `
<main
  className="container"
  id="content"
>
  <article>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8 offset-lg-4"
      >
        <SideEffect(DocumentMeta)
          description="Provides a basic search api against the National API Directory of Norway"
          title="National API Directory Search API"
        />
        <div
          className="d-flex fdk-detail-date mb-5"
        >
          <i
            className="align-self-center fdk-icon-catalog-api mr-2"
          />
          <strong
            className="align-self-center"
          >
            API-description
             
          </strong>
          <HarvestDate
            className="align-self-center"
            harvest={
              Object {
                "changed": Array [
                  "2018-12-21T09:27:29.577Z",
                  "2019-01-07T16:53:37.588Z",
                  "2019-01-07T16:54:19.940Z",
                  "2019-02-05T11:08:08.046Z",
                  "2019-02-05T11:08:24.889Z",
                  "2019-02-25T14:18:27.207Z",
                  "2019-02-26T08:39:00.913Z",
                  "2019-02-26T08:39:05.880Z",
                  "2019-03-01T17:00:01.476Z",
                  "2019-03-07T17:00:02.358Z",
                  "2019-04-02T10:00:01.620Z",
                  "2019-04-03T04:00:02.084Z",
                  "2019-04-23T10:00:01.993Z",
                  "2019-06-25T04:00:03.176Z",
                  "2019-08-04T04:00:04.028Z",
                ],
                "firstHarvested": "2018-12-19T09:52:51.883Z",
                "lastHarvested": "2019-08-05T10:10:00.051Z",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4 "
      >
        <StickyMenu
          menuItems={
            Array [
              Object {
                "name": "National API Directory Search API",
                "prefLabel": "Description",
              },
              Object {
                "name": "Format",
                "prefLabel": "Format",
              },
              Object {
                "name": "Start using the API",
                "prefLabel": "Start using the API",
              },
              Object {
                "name": "Operations",
                "prefLabel": "Operations",
              },
              Object {
                "name": "Terms and restrictions",
                "prefLabel": "Terms and restrictions",
              },
              Object {
                "name": "Dataset references",
                "prefLabel": "Dataset references",
              },
              Object {
                "name": "Contact information",
                "prefLabel": "Contact information",
              },
            ]
          }
          title="Go to"
        />
      </div>
      <section
        className="col-12 col-lg-8 mt-3 api-details-section"
      >
        <div
          name="National API Directory Search API"
        >
          <SearchHitHeader
            darkThemeBackground={true}
            externalLink={false}
            nationalComponent={false}
            publisher={
              Object {
                "id": "974760673",
                "name": "REGISTERENHETEN I BRØNNØYSUND",
                "orgPath": "/STAT/912660680/974760673",
                "prefLabel": Object {
                  "no": "Brønnøysundregistrene",
                },
                "uri": "http://data.brreg.no/enhetsregisteret/enhet/974760673",
              }
            }
            publisherItems={null}
            publisherLabel="Provider:"
            publisherTag="span"
            referenceData={null}
            statusCode={null}
            tag="h1"
            theme={Array []}
            title="National API Directory Search API"
            titleLink={null}
          />
          <withStateHandlers(ShowMorePure)
            showMoreButtonText="Show the full description"
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Provides a basic search api against the National API Directory of Norway</p>",
                }
              }
            />
          </withStateHandlers(ShowMorePure)>
          <div
            className="access-icons mb-5 d-flex justify-content-between"
          >
            <span
              className="access-icon flex-fill fdk-color-success"
            >
              <span
                className="icon2-icon-api-cost-none"
              >
                <span
                  className="path1"
                />
                <span
                  className="path2"
                />
                <span
                  className="path3"
                />
                <span
                  className="path4"
                />
                <span
                  className="path5"
                />
              </span>
              Free
            </span>
            <span
              className="access-icon flex-fill fdk-color-success"
            >
              <span
                className="icon2-icon-api-access-all"
              >
                <span
                  className="path1"
                />
                <span
                  className="path2"
                />
                <span
                  className="path3"
                />
                <span
                  className="path4"
                />
              </span>
              Public access
            </span>
            <span
              className="access-icon flex-fill fdk-color-success"
            >
              <span
                className="icon2-icon-api-license-open"
              >
                <span
                  className="path1"
                />
                <span
                  className="path2"
                />
                <span
                  className="path3"
                />
                <span
                  className="path4"
                />
                <span
                  className="path5"
                />
                <span
                  className="path6"
                />
              </span>
              Open license
            </span>
          </div>
        </div>
        <ListRegular
          bottomMargin={true}
          title="Format"
        >
          <div
            className="d-flex list-regular--item"
          >
            <span
              key="0"
            >
              application/json
            </span>
          </div>
        </ListRegular>
        <ApiServer
          apiDocUrl="https://informasjonsforvaltning.github.io/felles-datakatalog/api-katalog/api/"
          apiSpecUrl="https://raw.githubusercontent.com/brreg/openAPI/master/specs/api-cat.json"
          servers={
            Array [
              Object {
                "description": "The production API server",
                "url": "https://fellesdatakatalog.brreg.no/api-cat/apis",
              },
            ]
          }
        />
        <ApiEndpoints
          name="Operations"
          paths={
            Object {
              "/": Object {
                "get": Object {
                  "description": "So far only simple queries is supported",
                  "summary": "Queries the api catalog for api specifications",
                },
              },
              "/endpoints": Object {
                "get": Object {
                  "description": "dedicated path to serve endpoints based on organization and/or standard",
                  "summary": "Queries the api catalog for api specifications",
                },
              },
              "/{id}": Object {
                "get": Object {
                  "summary": "Get a specific api",
                },
              },
              "/{id}/schema": Object {
                "get": Object {
                  "summary": "Get a specific api's specification",
                },
              },
            }
          }
        />
        <ListRegular
          bottomMargin={true}
          title="Terms and restrictions"
        >
          <TwoColRow
            col1="Terms of service"
            col1Width={null}
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no/about"
              >
                https://fellesdatakatalog.brreg.no/about
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
            col2Width={null}
          />
          <TwoColRow
            col1="License"
            col1Width={null}
            col2={
              <a
                href="http://data.norge.no/nlod/no/2.0"
              >
                License of API
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
            col2Width={null}
          />
          <TwoColRow
            col1="Price"
            col1Width={null}
            col2="Gratis"
            col2Width={null}
          />
        </ListRegular>
        <ListRegular
          bottomMargin={true}
          title="Contact information"
        >
          <TwoColRow
            col1="Contact point"
            col1Width={null}
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no"
              >
                Brønnøysundregistrene
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
            col2Width={null}
          />
          <TwoColRow
            col1="Email"
            col1Width={null}
            col2={
              <a
                href="mailto:fellesdatakatalog@brreg.no"
                rel="noopener noreferrer"
                title="fellesdatakatalog@brreg.no"
              >
                fellesdatakatalog@brreg.no
              </a>
            }
            col2Width={null}
          />
        </ListRegular>
        <div
          style={
            Object {
              "height": "75vh",
            }
          }
        />
      </section>
    </div>
  </article>
</main>
`;

exports[`should render ApiDetailsPage correctly with missing api-properties 1`] = `
<main
  className="container"
  id="content"
>
  <article>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-8 offset-lg-4"
      >
        <SideEffect(DocumentMeta)
          description={null}
          title={null}
        />
        <div
          className="d-flex fdk-detail-date mb-5"
        >
          <i
            className="align-self-center fdk-icon-catalog-api mr-2"
          />
          <strong
            className="align-self-center"
          >
            API-description
             
          </strong>
          <HarvestDate
            className="align-self-center"
            harvest={null}
          />
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-12 col-lg-4 "
      >
        <StickyMenu
          menuItems={
            Array [
              Object {
                "name": "Terms and restrictions",
                "prefLabel": "Terms and restrictions",
              },
            ]
          }
          title="Go to"
        />
      </div>
      <section
        className="col-12 col-lg-8 mt-3 api-details-section"
      >
        <div
          name={null}
        >
          <SearchHitHeader
            darkThemeBackground={true}
            externalLink={false}
            nationalComponent={false}
            publisher={null}
            publisherItems={null}
            publisherLabel="Provider:"
            publisherTag="span"
            referenceData={null}
            statusCode={null}
            tag="h1"
            theme={Array []}
            title={null}
            titleLink={null}
          />
          <div
            className="access-icons mb-5 d-flex justify-content-between"
          />
        </div>
        0
        <ListRegular
          bottomMargin={true}
          title="Terms and restrictions"
        >
          <TwoColRow
            col1="Terms of service"
            col1Width={null}
            col2={
              <a
                href="https://fellesdatakatalog.brreg.no/about"
              >
                https://fellesdatakatalog.brreg.no/about
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
            col2Width={null}
          />
          <TwoColRow
            col1="License"
            col1Width={null}
            col2={
              <a
                href="http://data.norge.no/nlod/no/2.0"
              >
                License of API
                <i
                  className="fa fa-external-link fdk-fa-right"
                />
              </a>
            }
            col2Width={null}
          />
        </ListRegular>
        <div
          style={
            Object {
              "height": "75vh",
            }
          }
        />
      </section>
    </div>
  </article>
</main>
`;

exports[`should render ApiDetailsPage correctly with no apiItem 1`] = `""`;
